tests/aster/x/mochi/rosetta/call-a-function-7.error
error[A005]: list element type mismatch
  --> /workspace/mochi/tests/rosetta/x/Mochi/call-a-function-7.mochi:3:10

  3 |   return [0, 0.0]
    |          ^

help:
  Ensure all list elements share a type
